# portal-core

./: .gitignore  Cargo.toml  README.md  build.sh  makefile
corelib/: iocore.cc  iocore.h  makefile.mk  map.h  passes.cc  passes.h  wasm3h.h
jectLib/: ject.cc  ject.h  jectglobals.h  makefile.mk
tools/: cmake.sh  embedfile.c  k++  kcc
tools/wasm-compose-compile/: Cargo.toml
tools/wasm-compose-compile/src/: composer.rs  graph.rs  lib.rs
