[package]
name = "wasm-compose-compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
arbitrary = "1.1.0"
clap = { version = "4.0.0", features = ["derive"] }
criterion = "0.3.3"
env_logger = "0.9"
indexmap = {version = "1.9.1", features = ["serde"] }
leb128 = "0.2.4"
libfuzzer-sys = "0.4.0"
log = "0.4.17"
num_cpus = "1.13"
rand = { version = "0.8.4", features = ["small_rng"] }
rayon = "1.3"
serde = { version = "1.0.137", features = ["derive"] }
wasmtime = { version = "3.0.0", default-features = false, features = ['cranelift'] }
url = "2.0.0"
pretty_assertions = "1.3.0"
petgraph = "0.6.2"
serde_yaml = "0.8.26"
smallvec = "1.10.0"
heck = "0.4.0"

wasm-encoder = { version = "0.25.0"}
wasm-compose = { version = "0.2.11"}
wasm-metadata = { version = "0.3.1" }
wasm-mutate = { version = "0.2.22" }
wasm-shrink = { version = "0.1.23" }
wasm-smith = { version = "0.12.5" }
wasmparser = { version = "0.102.0" }
wasmprinter = { version = "0.2.54" }
wast = { version = "55.0.0" }
wat = { version = "1.0.61" }
wit-component = { version = "0.7.4" }
wit-parser = { version = "0.6.4" }